# gazebo_plugins

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Findnavigation.cmake
eval/: CMakeLists.txt  plot.py  sample_uniformly.cpp  utils.py
spawning_plugins/: CMakeLists.txt
spawning_plugins/src/: infinity_spawn.cpp
utils/: gazebo_utils.h
vehicle_plugins/: CMakeLists.txt  vehicle_plugin.h
vehicle_plugins/include/vehicle_plugins/: autonomous_control.h  hybrid_learning.h  manual_control.h  ppo_learning.h  reinforcement_learning.h
vehicle_plugins/src/: autonomous_control.cpp  hybrid_learning.cpp  manual_control.cpp  ppo_learning.cpp  reinforcement_learning.cpp
